# dyad

./: .clang-format  .gitignore  .readthedocs.yaml  CHANGELOG.md  CMakeLists.txt  README.md
.github/prod-cons/: dyad_consumer.sh  dyad_prod_cons_test.sh  dyad_producer.sh  prod_cons_argparse.sh
.github/workflows/: compile_test.yaml
cmake/configure_files/: dyad-config.cmake.in  dyad_config.hpp.in  dyad_module.lua.in
cmake/modules/: DyadSetupCompiler.cmake  FindCatch2.cmake  FindCppLogger.cmake  FindFluxCore.cmake  FindGotcha.cmake  SetupCompiler.cmake  Symlink.cmake  cpp-logger-fix-export.patch  fetch_package.cmake
docs/: Doxyfile  Makefile  SCA-HPCAsia26_tutorial.rst  conf.py  debugging.rst  design.rst  developer_guide.rst  docutils.conf  dyad_logos.rst  ecp_feb_2023_tutorial.rst  find_doxygen_sigs.py  getting_started.rst  index.rst  integration_with_PyTorch.rst  logo.rst  publications.rst  requirements.txt  runtime_configuration.rst
docs/_fragments/: design_cache.rst  design_dtl.rst  design_init.rst  design_local_access.rst  design_lookup.rst  design_overview.rst
docs/_static/: img_width.css
docs/_static/logo/: logo.css
docs/_templates/: search.html
docs/api/: core.rst  dtl.rst  service.rst  stream.rst  utility.rst
docs/demos/SCA26/: .instruction.txt.swo  Makefile  c_cons.sh  c_prod.sh  check_env.sh  instruction.md  setup_env.sh
docs/demos/SCA26/DL/: dyad_torch_data_loader.py
docs/demos/SCA26/batch/: select_language.sh  task_cons.sh  task_prod.sh  workflow.sh
docs/demos/SCA26/interactive/: c_cons.sh  c_prod.sh
include/dyad/client/: dyad_client.h
include/dyad/common/: dyad_cache.h  dyad_dtl.h  dyad_envs.h  dyad_rc.h
include/dyad/core/: dyad_ctx.h
include/dyad/stream/: dyad_params.hpp  dyad_stream_api.hpp  dyad_stream_core.hpp
pydyad/: setup.cfg
pydyad/pydyad/: bindings.py  context.py
src/dyad/: CMakeLists.txt
src/dyad/cache/: CMakeLists.txt  dyad_cache.c  dyad_cache_api.c  dyad_cache_api.h  dyad_cache_int.h  fifo_cache.c  fifo_cache.h  lru_cache.c  lru_cache.h
src/dyad/client/: CMakeLists.txt  dyad_client.c  dyad_client_int.h
src/dyad/common/: dyad_logging.h  dyad_profiler.h  dyad_structures_int.h
src/dyad/core/: CMakeLists.txt  dyad_ctx.c
src/dyad/dtl/: CMakeLists.txt  dyad_dtl_api.c  dyad_dtl_api.h  flux_dtl.c  flux_dtl.h  margo_dtl.c  margo_dtl.h  ucx_dtl.c  ucx_dtl.h  ucx_ep_cache.cpp  ucx_ep_cache.h
src/dyad/service/: CMakeLists.txt  dyad_exe.c
src/dyad/service/cache/: CMakeLists.txt  cache_client.c  cache_client.h  cache_common.h  cache_margo_client.c  cache_margo_client.h  cache_margo_server.c  cache_margo_server.h  cache_server.c  example_cache_client.c
src/dyad/service/flux_module/: CMakeLists.txt  dyad.c
src/dyad/stream/: CMakeLists.txt  dyad_stream_core.cpp
src/dyad/utils/: CMakeLists.txt  murmur3.h  range_cache.c  range_cache.h  read_all.h  test_cmp_canonical_path_prefix.c  test_murmur3.c  utils.c  utils.h
src/dyad/wrapper/: CMakeLists.txt  wrapper.c
tests/: CMakeLists.txt
tests/dspaces_perf/: CMakeLists.txt  catch_config.h
tests/pydyad_spsc_lazy_range/: consumer.py  producer.py  run.sh
tests/pydyad_spsc_range/: consumer.py  producer.py  run.sh
tests/shuffle/: CMakeLists.txt  README.md  cli_args.hpp  shuffle.cpp  utils.cpp  utils.hpp  worker.cpp  worker.hpp
tests/stream/: README.md  batch.sh  startup.sh  test_stream.cpp
tests/unit/: CMakeLists.txt  catch_config.h  mpi_console_reporter.cpp  unit_test.cpp
tests/unit/cache/: CMakeLists.txt  cache_functions.cpp
tests/unit/data_plane/: data_plane.cpp
tests/unit/dyad_core/: core_functions.cpp
